[gd_scene load_steps=6 format=3 uid="uid://byco27oibj3t3"]

[ext_resource type="PackedScene" uid="uid://8mgoysoibj55" path="res://Enviroment/enviroment.tscn" id="1_fvoio"]
[ext_resource type="Script" path="res://SceneManager/main.gd" id="1_qsoqs"]
[ext_resource type="PackedScene" uid="uid://b7k0hcc24467d" path="res://Player/Player.tscn" id="2_0iisd"]
[ext_resource type="PackedScene" uid="uid://b2pidvf1nxijc" path="res://Ui/pause_menu.tscn" id="4_dmw0n"]
[ext_resource type="PackedScene" uid="uid://bhep23ns845ta" path="res://Ui/boons.tscn" id="5_piynp"]

[node name="Main" type="Node3D"]
script = ExtResource("1_qsoqs")

[node name="Enviroment" parent="." instance=ExtResource("1_fvoio")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 3)

[node name="Player" parent="." instance=ExtResource("2_0iisd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.888003, 3.8601, -100.9)

[node name="PauseMenu" parent="." instance=ExtResource("4_dmw0n")]
process_mode = 3
visible = false

[node name="Boons" parent="." instance=ExtResource("5_piynp")]
visible = false

[node name="SunBoon" parent="Boons" index="0"]
visible = false

[node name="TextureButton" parent="Boons/SunBoon" index="0"]
visible = false

[editable path="PauseMenu"]
[editable path="Boons"]
